<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_alllistings">

    <fragment
        android:id="@+id/navigation_alllistings"
        android:name="com.example.campusplate_android.ui.alllistings.AllListingsFragment"
        android:label="@string/title_alllistings"
        tools:layout="@layout/fragment_all_listings" >
        <action
            android:id="@+id/action_navigation_alllistings_to_navigation_viewlisting"
            app:destination="@id/navigation_viewlisting" />
        <action
            android:id="@+id/action_navigation_alllistings_to_navigation_addlisting"
            app:destination="@id/navigation_addlisting" />
        <action
            android:id="@+id/action_navigation_alllistings_to_reservation_Fragment"
            app:destination="@id/reservationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mylistings"
        android:name="com.example.campusplate_android.ui.mylistings.MyListingsFragment"
        android:label="@string/title_mylistings"
        tools:layout="@layout/fragment_my_listings" >
        <action
            android:id="@+id/action_navigation_mylistings_to_addListing"
            app:destination="@id/navigation_addlisting" />
    </fragment>
    <fragment
        android:id="@+id/navigation_addlisting"
        android:name="com.example.campusplate_android.ui.addlisting.AddListingFragment"
        android:label="@string/title_addlisting"
        tools:layout="@layout/fragment_add_listing">
        <action
            android:id="@+id/action_navigation_addlisting_to_navigation_alllistings"
            app:destination="@id/navigation_alllistings" />
    </fragment>
    <fragment
        android:id="@+id/navigation_viewlisting"
        android:name="com.example.campusplate_android.ui.viewlisting.ViewListingFragment"
        android:label="@string/title_viewlisting"
        tools:layout="@layout/fragment_view_listing">
        <action
            android:id="@+id/action_navigation_viewlisting_pop"
            app:destination="@+id/navigation_alllistings"
            app:popUpTo="@+id/navigation_viewlisting"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_viewlisting_to_lisitingConfirmationFragment"
            app:destination="@id/navigation_lisitingConfirmation" />
        <action
            android:id="@+id/action_navigation_viewlisting_to_listingConfirmationRetrieval"
            app:destination="@id/listingConfirmationRetrieval" />
    </fragment>
    <fragment
        android:id="@+id/navigation_editlisting"
        android:name="com.example.campusplate_android.ui.editlisting.EditListingFragment"
        android:label="@string/title_editlisting"
        tools:layout="@layout/fragment_edit_listing">
        <action
            android:id="@+id/action_navigation_editlisting_pop"
            app:destination="@+id/navigation_mylistings"
            app:popUpTo="@id/navigation_editlisting"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_lisitingConfirmation"
        android:name="com.example.campusplate_android.ui.listingconfirmation.LisitingConfirmationFragment"
        android:label="lisiting_confirmation_fragment"
        tools:layout="@layout/lisiting_confirmation_fragment" >
        <action
            android:id="@+id/action_navigation_lisitingConfirmation_to_navigation_alllistings"
            app:destination="@id/navigation_alllistings" />
    </fragment>
    <fragment
        android:id="@+id/reservationFragment"
        android:name="com.example.campusplate_android.ui.Reservation.ReservationFragment"
        android:label="fragment_item_list"
        tools:layout="@layout/fragment_item_list" />
    <fragment
        android:id="@+id/reservation_Fragment"
        android:name="com.example.campusplate_android.ui.Reservation.Reservation_Fragment"
        android:label="fragment_reservation_"
        tools:layout="@layout/fragment_reservation_" >
        <action
            android:id="@+id/action_reservation_Fragment_to_navigation_alllistings"
            app:destination="@id/navigation_alllistings" />
    </fragment>
    <fragment
        android:id="@+id/listingConfirmationRetrieval"
        android:name="com.example.campusplate_android.ui.listingconfirmation.ListingConfirmationRetrieval"
        android:label="fragment_listing_confirmation_retrieval"
        tools:layout="@layout/fragment_listing_confirmation_retrieval" >
        <action
            android:id="@+id/action_listingConfirmationRetrieval_to_navigation_alllistings"
            app:destination="@id/navigation_alllistings" />
    </fragment>
</navigation>